remove load more btn if dont have more to load, also fix bug of initial heart icon in home page

--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -25,7 +25,7 @@
                 </div>
         </div>
 
-        <div class="my-3 row justify-content-center">
+        <div th:if="${showLoadMoreBtn}" id="loadMoreContainer" class="my-3 row justify-content-center">
             <button id="loadMore" class="btn btn-primary col-4">More</button>
         </div>
     </div>
