--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -8,7 +8,7 @@
 
 <body>
 <!--NOGA : offcanvas-end=right and offcanvas-start=left-->
-  <div th:fragment="menu" class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
+  <div th:fragment="menu" class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
     aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title mt-3 ms-3" id="offcanvasExampleLabel">Search Menu</h5>
