Add/delete comments and fix fragments warnnings

--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -7,6 +7,7 @@
 <!--    <title>Title</title>-->
 <!--</head>-->
 <!--<body>-->
+<!--NOGA: DELETE?-->
 <div th:fragment="card" class="card card-container">
   <!--/*@thymesVar id="type" type=""*/-->
   <div class="card__side card__side--back">
