--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <div class="container-fluid">
-        <header th:insert="fragments/header.html :: header"> </header>
+        <header th:insert="~{fragments/header::header}"> </header>
         <h1 class="pt-4 d-flex justify-content-center align-items-center">Favourites</h1>
         <div id="favouritesContainer" class="row row-cols-1 row-cols-md-2 g-4 mx-3">
                 <div th:each="jokeObj : ${favourites}" th:id="'card-' + ${jokeObj.id}" class="col card-con" th:type="${jokeObj.type}">
-                    <div th:insert="fragments/card2.html :: card2" th:with="jokeObj=${jokeObj}"></div>
-                   <div class="btn delete-btn" th:data-joke-id="${jokeObj.id}">
+                    <div th:insert="~{fragments/card2::card2}" th:with="jokeObj=${jokeObj}"></div>
+                    <div class="btn delete-btn" th:data-joke-id="${jokeObj.id}">
                     <i class="fa-solid fa-trash"></i>
                    </div>
                 </div>
@@ -29,7 +29,7 @@
             <button id="loadMore" class="btn btn-primary col-4">More</button>
         </div>
     </div>
-    <div th:insert="fragments/menu.html :: menu"> </div>
+    <div th:insert="~{fragments/menu.html::menu}"> </div>
 </body>
 
 
