--- a/src/main/resources/templates/fragments/card2.html
+++ b/src/main/resources/templates/fragments/card2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-
+<!--NOGA: change file name?-->
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
