--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container-fluid">
-        <header th:insert="fragments/header.html :: header"> </header>
+        <header th:insert="~{fragments/header.html::header}"> </header>
         <h2 class="pt-4 d-flex justify-content-center align-items-center">User Profile</h2>
         <div class="row">
             <div class="col-md-6 offset-md-3">
@@ -42,7 +42,7 @@
             <button type="submit" class="btn btn-primary">Logout</button>
         </form>
     </div>
-    <div th:insert="fragments/menu.html :: menu"> </div>
+    <div th:insert="~{fragments/menu.html::menu}"> </div>
 </body>
 
 </html>
