add js file to index js

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,112 +10,7 @@
     <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        let addBtn = document.getElementById("addFavourite");
-        const card = document.getElementById('clickable');
-        let cardbox = document.getElementById("cardBox");
-        card.addEventListener('click', handleFlip)
-        const buttonIcon = document.getElementById("buttonIcon");
-        const isFavourite = addBtn.getAttribute("data-isFavourite"); //NOGA: we can check if contain specific classname
-
-        handleInitialButtonState(isFavourite === "true"); //NOGA
-
-        function handleInitialButtonState(isFavourite) {
-            addBtn.setAttribute("data-isFavourite", isFavourite);
-            if (isFavourite) {
-                buttonIcon.classList.remove("fa-regular");
-                buttonIcon.classList.add("fa-solid");
-                addBtn.removeEventListener('click', add);
-            } else {
-                buttonIcon.classList.remove("fa-solid");
-                buttonIcon.classList.add("fa-regular");
-                addBtn.addEventListener('click', add);
-            }
-        }
-
-        function handleFlip() {
-            if(!card.classList.contains('flip-btn')) return;
-            const f = document.getElementById('front')
-            const b = document.getElementById('back')
-            f.classList.toggle('flipped')
-            b.classList.toggle('flipped')
-        }
-
-        // -----------------------------------
-        let front = document.getElementById('frontCardContent'); //NOGA
-        let back = document.getElementById('backCardContent'); //NOGA
-
-        document.getElementById("generate").addEventListener("click", () => {
-            fetch('/pages/getJokes')
-                .then(response => response.json()
-                )
-                .then(jsonData => {
-                    console.log(jsonData);
-                    const f = document.getElementById('front')
-                    const b = document.getElementById('back')
-                    cardbox.setAttribute("name", jsonData.id);
-                    if(f.classList.contains('flipped')){
-                        f.classList.toggle('flipped')
-                        b.classList.toggle('flipped')
-                    }
-                    //TODO: add to constantnsnsts!
-                    if (jsonData.type === "twopart") {
-                        front.innerHTML = jsonData.setup;
-                        back.innerHTML = jsonData.delivery;
-                        card.classList.add('flip-btn');
-                    }
-                    else {
-                        front.innerHTML = jsonData.joke;
-                        back.innerHTML = "";
-                        card.classList.remove('flip-btn')
-                        card.classList.add('not-flip')
-                    }
-                    console.log(jsonData.isFavourite);
-                    handleInitialButtonState(jsonData.isFavourite);
-                })
-                .catch(error => {
-                    console.log(error);
-                });
-        });
-
-        function add(){
-            let jokeId = cardbox.getAttribute("name");
-            fetch('/favourites/add', {
-                    method: "POST",
-                    headers: {"Content-Type": "application/json"},
-                    body: jokeId
-                }
-            )
-                .then(response =>
-                {
-                    handleInitialButtonState(true);
-                    console.log(response);
-                })
-                .catch(error => {
-                    console.log("could not add ", error);
-                });
-        }
-
-        //Tali: trying to add here hover, once I removed if statement, then after clicking it was not solid but did not work with if statement ...
-        addBtn.addEventListener('mouseenter', () => {
-            // let isFavourite = addBtn.getAttribute("data-isFavourite");
-            // console.log("is favourite: " + isFavourite);
-            // if (isFavourite) return;
-            // buttonIcon.classList.remove("fa-regular");
-            buttonIcon.classList.add("fa-beat");
-        });
-
-        addBtn.addEventListener('mouseleave', () => {
-            // let isFavourite = addBtn.getAttribute("data-isFavourite");
-            // console.log("is favourite: " + isFavourite);
-            // if(isFavourite) return;
-            buttonIcon.classList.remove("fa-beat");
-            // buttonIcon.classList.add("fa-regular");
-        });
-
-    });
-</script>
+<script src="/static/js/index.js"></script>
 
 <body>
     <div class="container-fluid">
