change style of card - scrollbar + font size, also copy the classnames that centered the text

--- a/src/main/resources/templates/fragments/card2.html
+++ b/src/main/resources/templates/fragments/card2.html
@@ -8,13 +8,15 @@
 <body>
   <div  th:fragment="card2" class="card-container ">  <!--container-->
     <div th:object="${jokeObj}" id="clickable" th:class="*{type}=='twopart' ? 'flip-btn joke-card' : 'not-flip joke-card' ">
-      <div id="back" class="cardBack  d-flex justify-content-center align-items-center">
-        <h3 id="backCardContent" th:text="*{delivery}"></h3>
+      <div id="back" class="cardBack overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
+        <div class="text-center">
+        <h4 id="backCardContent" th:text="*{delivery}"></h4>
+        </div>
       </div>
 
-      <div id="front" class="cardFront d-flex justify-content-center align-items-center">
+      <div id="front" class="cardFront overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
         <div class="text-center">
-          <h3 class="row" id="frontCardContent" th:text="*{type} == 'twopart' ? *{setup} : *{joke}"></h3>
+          <h4 class="row" id="frontCardContent" th:text="*{type} == 'twopart' ? *{setup} : *{joke}"></h4>
           <p class="flip-msg">Click to flip</p>
         </div>
       </div>
