--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--  NOGA: https://www.baeldung.com/spring-thymeleaf-fragments -->
-    <div th:fragment="header" class="d-flex p-2">
+    <div th:fragment="header" class="d-flex py-2 px-4 shadow p-3 mb-5 bg-body ">
 <!--        <button class="btn btn-outline-secondary me-3 p-2 px-3" type="button" data-bs-toggle="offcanvas"-->
 <!--            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">-->
 <!--            &#9776;-->
