--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -14,15 +14,24 @@
 </head>
 <body>
     <header th:insert="~{fragments/header::header}"> </header>
-    <div class="container-fluid">
+    <div class="container">
         <h1 class="pt-4 d-flex justify-content-center align-items-center">Favourites</h1>
         <div id="favouritesContainer" class="row row-cols-1 row-cols-md-2 g-4 mx-3">
                 <div th:each="jokeObj : ${favourites}" th:id="'card-' + ${jokeObj.id}" class="col card-con" th:type="${jokeObj.type}">
                     <div th:insert="~{fragments/card2::card2}" th:with="jokeObj=${jokeObj}"></div>
-                    <div class="btn delete-btn" th:data-joke-id="${jokeObj.id}">
-                    <i class="fa-solid fa-trash"></i>
-                   </div>
+                    <div class="d-flex">
+                        <div id="deleteBtn" class="btn delete-btn" th:data-joke-id="${jokeObj.id}">
+                             <i class="fa-solid fa-trash"></i>
+                       </div>
+                        <div th:id="'deleteLoader-' + ${jokeObj.id}" class="visually-hidden">
+                            <div class="spinner-border text-dark" role="status"></div>
+                        </div>
+                    </div>
                 </div>
+        </div>
+
+        <div id="pageLoader" class="d-flex justify-content-center visually-hidden">
+            <div class="spinner-border text-dark" role="status"></div>
         </div>
 
         <div th:if="${showLoadMoreBtn}" id="loadMoreContainer" class="my-3 row justify-content-center">
