--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -6,7 +6,7 @@
     <title>Jokes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/favourite.js"></script>
+    <script type="module" src="/static/js/favourite.js"></script>
     <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
 <!--    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>-->
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
@@ -39,6 +39,8 @@
         </div>
     </div>
     <div th:insert="~{fragments/menu.html::menu}"> </div>
+    <div th:insert="~{fragments/toast.html::toast(id='deleteErrorToast', msg='could not delete, try again later')}"></div>
+    <div th:insert="~{fragments/toast.html::toast(id='loadMoreErrorToast', msg='could not load more, try again later')}"></div>
 </body>
 
 
