--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
+    <script type="module"  src="/static/js/index.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<script src="/static/js/index.js"></script>
 
 <body>
     <header th:insert="~{fragments/header.html::header}"> </header>
@@ -32,6 +32,8 @@
 
     </div>
     <div th:insert="~{fragments/menu.html::menu}"> </div>
+    <div th:insert="~{fragments/toast.html::toast(id='errorToast', msg='some error occurred, try again later')}"></div>
+
 </body>
 
 </html>
