--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--  NOGA: https://www.baeldung.com/spring-thymeleaf-fragments -->
-    <div th:fragment="header" class="d-flex py-2 px-4 shadow p-3 mb-3 bg-body ">
+    <div th:fragment="header" class="d-flex py-2 px-4 shadow mb-3 bg-body ">
 <!--        <button class="btn btn-outline-secondary me-3 p-2 px-3" type="button" data-bs-toggle="offcanvas"-->
 <!--            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">-->
 <!--            &#9776;-->
@@ -29,20 +29,20 @@
 <!--        </button>-->
 
         <!-- NOGA: *menu*                        *home* *profile* *likes*-->
-        <button class="btn btn-outline-secondary me-auto p-2 px-3 " type="button" data-bs-toggle="offcanvas"
+        <button class="btn me-auto p-2 px-3 " type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             &#9776;
         </button>
 <!--        <a class="btn btn-secondary p-2 me-2" href="/">Home</a>-->
-        <a class="btn btn-outline-secondary p-2 me-2" href="/">
+        <a class="btn p-2 me-3" href="/">
             <i class="fa-solid fa-house"></i>
         </a>
 <!--        <a class="btn btn-secondary p-2 me-2" href="/pages/userprofile">Profile</a>-->
-        <a class="btn btn-outline-secondary p-2 me-2" href="/pages/userprofile">
+        <a class="btn p-2 me-3" href="/pages/userprofile">
             <i class="fa-solid fa-user"></i>
         </a>
 <!--        <a class="btn btn-secondary p-2" href="/pages/favourite">My Likes</a>-->
-        <a class="btn btn-outline-secondary p-2" href="/pages/favourite">
+        <a class="btn p-2" href="/pages/favourite">
             <i class="fa-solid fa-heart"></i>
 <!--            <i class="fa-regular fa-circle-heart" style="color: #899cbd;"></i>-->
 <!--            <i class="fa-duotone fa-square-heart"></i>-->
