--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -59,7 +59,7 @@
 
 
 .card-container {
-    padding: 20px;
+    /*padding: 20px;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,6 +72,11 @@
     width: 100%;
     position: relative;
     border-radius: 0.25rem;
+}
+
+.card-footer{
+    border-radius: 0 0 20px 20px;
+    background: #cde0f7;
 }
 
 .cardFront,
