--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -20,7 +20,7 @@
                 <div th:each="jokeObj : ${favourites}" th:id="'card-' + ${jokeObj.id}" class="col card-con" th:type="${jokeObj.type}">
                     <div th:insert="~{fragments/card::card}" th:with="jokeObj=${jokeObj}"></div>
                     <div class="d-flex justify-content-center m-3 mt-0 rounded-bottom card-footer">
-                        <div th:id="'deleteBtn-' + ${jokeObj.id}" class="btn delete-btn" th:data-joke-id="${jokeObj.id}">
+                        <div th:id="'deleteBtn-' + ${jokeObj.id}" class="w-100 btn delete-btn" th:data-joke-id="${jokeObj.id}">
                              <i class="fa-solid fa-trash"></i>
                        </div>
                         <div th:id="'deleteLoader-' + ${jokeObj.id}" class="visually-hidden">
