--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -14,7 +14,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <form class="ms-3 me-3" th:action="@{/pages/search}" th:object="${searchFilter}" method="post">
+      <form class="ms-3 me-3" th:action="@{/api/search}" th:object="${searchFilter}" method="post">
         <div th:each="category: ${categories}" class="form-check">
           <input class="form-check-input" type="checkbox" th:value="${category}" th:id="'category-' + ${category}"
             th:field="*{selectedCategories}"/>
