--- a/src/main/resources/templates/fragments/toast.html
+++ b/src/main/resources/templates/fragments/toast.html
@@ -9,7 +9,7 @@
     <div th:id="${id}" class="toast fade align-items-center text-bg-warning border-0" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="d-flex">
         <div class="toast-body" th:text="${msg}"></div>
-        <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="utils" aria-label="Close"></button>
       </div>
     </div>
   </div>
