fix responsive card size in home page and bug in scroll text in card

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 
         <div class="d-flex flex-column align-items-center row">
 
-            <div id="cardBox" th:name="${jokeObj.id}" th:insert="~{fragments/card.html::card}" class="col-md-6"></div>
+            <div id="cardBox" th:name="${jokeObj.id}" th:insert="~{fragments/card.html::card}" class="col-md-6 col-sm-8 col-12"></div>
             <div class="d-flex justify-content-evenly">
                 <button id="generate" class="btn btn-secondary mx-2 mt-3" >Generate New</button>
 <!--                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}" th:text="${jokeObj.isFavourite} ? 'Added' : 'Add'" style="background-color: #575761; color: white;">-->
