changed href in html docs to thymeleaf @

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,7 +17,7 @@
         <h1>oops...</h1>
         <p>Looks like something went wrong!</p>
         <div th:text="${error}"></div>
-        <a href="/">Home</a>
+        <a th:href="@{/}">Home</a>
     </div>
 </body>
 
