--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,13 +13,13 @@
                 data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             &#9776;
         </button>
-        <a class="btn p-2 me-3" href="/">
+        <a class="btn p-2 me-3" th:href="@{/}">
             <i class="fa-solid fa-house"></i>
         </a>
-        <a class="btn p-2 me-3" href="/pages/userprofile">
+        <a class="btn p-2 me-3" th:href="@{/pages/userprofile}">
             <i class="fa-solid fa-user"></i>
         </a>
-        <a class="btn p-2" href="/pages/favourite">
+        <a class="btn p-2" th:href="@{/pages/favourite}">
             <i class="fa-solid fa-heart"></i>
         </a>
 
