--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,9 +23,9 @@
                 <button id="generate" class="btn btn-secondary mx-2 mt-3" >Generate New</button>
 <!--                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}" th:text="${jokeObj.isFavourite} ? 'Added' : 'Add'" style="background-color: #575761; color: white;">-->
 <!--                </button>-->
-                <a id="addFavourite" class="btn mx-2 mt-3" href="#" th:data-isFavourite="${jokeObj.isFavourite}">
+                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}">
                     <i id="buttonIcon" class="fa-regular fa-heart"></i>
-                </a>
+                </button>
 
             </div>
         </div>
