--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <title>Jokes</title>
-    <!-- Include Bootstrap CSS -->
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
@@ -19,11 +17,13 @@
         <div class="d-flex flex-column align-items-center row">
 
             <div id="cardBox" th:name="${jokeObj.id}" th:insert="~{fragments/card.html::card}" class="col-md-6 col-sm-8 col-12"></div>
-            <div class="d-flex justify-content-evenly">
-                <button id="generate" class="btn btn-secondary mx-2 mt-3" >Generate New</button>
-<!--                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}" th:text="${jokeObj.isFavourite} ? 'Added' : 'Add'" style="background-color: #575761; color: white;">-->
-<!--                </button>-->
-                <button id="addFavourite" class="btn mx-2 mt-3" th:data-isFavourite="${jokeObj.isFavourite}">
+            <div class="d-flex justify-content-between w-50 mt-2">
+                <div class="d-flex align-items-center">
+
+                <button id="generate" class="btn btn-secondary mx-2 me-4" >Generate New</button>
+                    <div th:replace="~{fragments/loader.html::loader(id='gengenerateNewLoader')}"></div>
+                </div>
+                <button id="addFavourite" class="btn mx-2" th:data-isFavourite="${jokeObj.isFavourite}">
                     <i id="buttonIcon" class="fa-regular fa-heart"></i>
                 </button>
 
