--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <!--NOGA: change file name?-->
+
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
+
 <body>
-  <div  th:fragment="card" class="card-container p-3 pb-2">  <!--container-->
-    <div th:object="${jokeObj}" id="clickable" th:class="*{type}=='twopart' ? 'flip-btn joke-card text-break' : 'not-flip joke-card text-break' ">
-      <div id="back" class="cardBack overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
+  <div th:fragment="card" class="card-container p-3 pb-2"> <!--container-->
+    <div th:object="${jokeObj}" id="clickable"
+      th:class="*{type}=='twopart' ? 'flip-btn joke-card text-break' : 'not-flip joke-card text-break' ">
+      <div id="back"
+        class="cardBack overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
         <div class="text-center mh-100">
-           <h4 id="backCardContent" th:text="*{delivery}"></h4>
+          <h4 id="backCardContent" th:text="*{delivery}"></h4>
         </div>
       </div>
 
-      <div id="front" class="cardFront overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
+      <div id="front"
+        class="cardFront overflow-x-hidden overflow-y-auto d-flex justify-content-center align-items-center">
         <div class="text-center mh-100">
           <h4 class="row" id="frontCardContent" th:text="*{type} == 'twopart' ? *{setup} : *{joke}"></h4>
           <p class="flip-msg">Click to flip</p>
@@ -23,4 +28,5 @@
     </div>
   </div>
 </body>
+
 </html>
