--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/4e3daad3f4.js" crossorigin="anonymous"></script>
-    <script type="module"  src="/static/js/index.js"></script>
+    <script type="module" src="/static/js/index.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 
@@ -16,11 +16,12 @@
 
         <div class="d-flex flex-column align-items-center row">
 
-            <div id="cardBox" th:name="${jokeObj.id}" th:insert="~{fragments/card.html::card}" class="col-md-6 col-sm-8 col-12"></div>
+            <div id="cardBox" th:name="${jokeObj.id}" th:insert="~{fragments/card.html::card}"
+                class="col-md-6 col-sm-8 col-12"></div>
             <div class="d-flex justify-content-between w-50 mt-2">
                 <div class="d-flex align-items-center">
 
-                <button id="generate" class="btn btn-secondary mx-2 me-4" >Generate New</button>
+                    <button id="generate" class="btn btn-secondary mx-2 me-4">Generate New</button>
                     <div th:replace="~{fragments/loader.html::loader(id='gengenerateNewLoader')}"></div>
                 </div>
                 <button id="addFavourite" class="btn mx-2" th:data-isFavourite="${jokeObj.isFavourite}">
