--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<!--NOGA: maybe change text or something-->
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>404</title>
+    <title>Jokes 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,7 +14,7 @@
 
 <body>
     <div class="container">
-        <h1>oops...</h1>
+        <h1>Oh no!</h1>
         <p>Looks like something went wrong!</p>
         <div th:text="${error}"></div>
         <a th:href="@{/}">Home</a>
