delete comments and handle error

--- a/src/main/resources/templates/favourite.html
+++ b/src/main/resources/templates/favourite.html
@@ -47,7 +47,7 @@
     <div th:insert="~{fragments/toast.html::toast(id='deleteErrorToast', msg='could not delete, try again later')}">
     </div>
     <div
-        th:insert="~{fragments/toast.html::toast(id='loadMoreErrorToast', msg='could not load more, try again later')}">
+        th:insert="~{fragments/toast.html::toast(id='loadMoreErrorToast', msg='server error, try again later')}">
     </div>
 </body>
 
